# repo-atlas

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  plan.md  pyproject.toml
.claude/: settings.json
.claude/skills/schema-change/: SKILL.md
.claude/skills/update-workstation/: SKILL.md
.github/workflows/: ci.yml
analyzer/src/atlas_analyzer/: __init__.py  artifact_io.py  cli.py  config.py  impact.py  ingestion.py  query.py  serve.py  watch.py
analyzer/src/atlas_analyzer/abstraction/: __init__.py  layering.py
analyzer/src/atlas_analyzer/analysis/: __init__.py  analyzer.py  facts.py  languages.py  repository.py  roles.py
analyzer/src/atlas_analyzer/enrichment/: __init__.py  contracts.py  enrich.py  provider.py
analyzer/src/atlas_analyzer/models/: __init__.py  impact.py  map.py  trace.py
analyzer/tests/: test_abstraction.py  test_artifact_contracts.py  test_enrichment.py  test_impact.py  test_incremental.py  test_roles.py  test_serve.py  test_static_analysis.py  test_trace_ingestion.py  test_watch.py
analyzer/tests/fixtures/golden_repo/: .gitignore  tsconfig.json
analyzer/tests/fixtures/golden_repo/src/: app.py
analyzer/tests/fixtures/golden_repo/src/auth/: session.py
analyzer/tests/fixtures/golden_repo/web/: main.ts
analyzer/tests/fixtures/golden_repo/web/lib/: client.ts  helper.js
docs/: claude-code-hooks.json
scripts/: atlas_claude_hook.py  generate_models.py  generate_viewer_perf_fixture.py  validate_impact.py  validate_incremental.py  validate_recorded_enrichment.py
shared/fixtures/: sample.impact.json  sample.map.json  sample.trace.json
shared/schemas/: impact.schema.json  map.schema.json  trace.schema.json
viewer/: index.html  package-lock.json  package.json  tsconfig.app.json
viewer/scripts/: check-generated.mjs
viewer/src/: App.tsx  ImpactControls.tsx  TraceControls.tsx  contracts.test.ts  graph.test.ts  graph.ts  impact.test.ts  impact.ts  main.tsx  styles.css  trace.test.ts  trace.ts
