[project]
name = "atlas-analyzer"
version = "0.1.0"
description = "Static analysis and trace ingestion for ATLAS"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "json5>=0.12",
  "litellm>=1.77",
  "networkx>=3.6",
  "pathspec>=1.0",
  "pydantic>=2.10",
  "tree-sitter>=0.25",
  "tree-sitter-javascript>=0.25",
  "tree-sitter-python>=0.25",
  "tree-sitter-typescript>=0.23",
  "typer>=0.16",
  "websockets>=15",
]

[project.scripts]
atlas = "atlas_analyzer.cli:app"

[dependency-groups]
dev = [
  "black>=26.3.1",
  "datamodel-code-generator>=0.31",
  "jsonschema[format]>=4.23",
  "pytest>=9.0.3",
  "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["analyzer/src"]

[tool.pytest.ini_options]
testpaths = ["analyzer/tests"]
pythonpath = ["analyzer/src"]
addopts = "-q"

[tool.black]
extend-exclude = "analyzer/src/atlas_analyzer/models/(map|trace|impact)\\.py"

[tool.ruff]
target-version = "py312"
extend-exclude = [
  "analyzer/src/atlas_analyzer/models/map.py",
  "analyzer/src/atlas_analyzer/models/trace.py",
  "analyzer/src/atlas_analyzer/models/impact.py",
  "analyzer/tests/fixtures",
]
